change to OneEleven body class, causing collapse with CodeMirror, minor change to .admin-title regarding issues with very long sitename.
git-svn-id: http://svn.cmsmadesimple.org/svn/cmsmadesimple@8550 3d254a34-79dc-0310-9e5f-be208747d8a0

--- a/trunk/admin/themes/OneEleven/css/style-rtl.css
+++ b/trunk/admin/themes/OneEleven/css/style-rtl.css
@@ -902,6 +902,8 @@ header .cms-logo {
 header .admin-title {
 	text-align: right;
 	display: inline-block;
+	max-width: 70%;
+	overflow: hidden;	
 	height: 70px;
 	font: bold 14px/70px sans-serif;
 	margin-left: 20px;
